# stockfighter

./: .gitignore  CMakeLists.txt  license.md  readme.md
headers/: configuration.hpp  console.hpp  curl.hpp  error.hpp  game.hpp  json.hpp  json_fwd.hpp  log.hpp  recurrent.hpp  reentrant.hpp  require.hpp  shell.hpp  stock.hpp  stock_fwd.hpp  str.hpp  switches.hpp  task_queue.hpp  websocket.hpp
settings/: settings.stockfighter
sources/: configuration.cpp  console.cpp  curl.cpp  game.cpp  json.cpp  log.cpp  main.cpp  shell.cpp  stock.cpp  str.cpp  websocket.cpp
